Prevent the number of views on the grid from wrapping in some languages

--- a/mediacore/public/styles/base.css
+++ b/mediacore/public/styles/base.css
@@ -416,14 +416,13 @@ a:focus .grid-title {
 	left: -5000px;
 }
 .grid-meta .meta-likes,
-.grid-meta .meta-views,
-.grid-meta .meta-comments {
+.grid-meta .meta-views {
 	float: left;
 	display: block;
 	width: 35px;
 }
 .grid-meta .meta-views {
-	width: 60px;
+	width: 120px;
 }
 
 .thumb-wrap {
